using UnityEngine;

namespace GameEngine
{
    public sealed class AudioManager : MonoBehaviour
    {
        // Handles audio playback and management
    }
}
