namespace GameEngine
{
    public abstract class Component
    {
        // Base class for all components (position, health, etc.)
    }
}
