namespace GameEngine
{
    public class Entity
    {
        // Base class for all game entities (player, NPC, item, etc.)
    }
}
