using UnityEngine;

namespace GameEngine
{
    public sealed class GameEngine : MonoBehaviour
    {
        // Entry point for engine systems
        private void Awake()
        {
            // Initialize managers (Scene, Resource, Audio, Physics, UI, etc.)
        }
    }
}
