using UnityEngine;

namespace GameEngine
{
    public sealed class InputManager : MonoBehaviour
    {
        // Handles player input
    }
}
