using UnityEngine;

namespace GameEngine
{
    public sealed class PhysicsManager : MonoBehaviour
    {
        // Handles physics simulation
    }
}
