using UnityEngine;

namespace GameEngine
{
    public sealed class Renderer : MonoBehaviour
    {
        // Handles rendering logic
    }
}
