using UnityEngine;

namespace GameEngine
{
    public sealed class ResourceManager : MonoBehaviour
    {
        // Handles loading and managing game resources
    }
}
