using UnityEngine;

namespace GameEngine
{
    public sealed class SceneManager : MonoBehaviour
    {
        // Manages scenes and transitions
    }
}
