using UnityEngine;

namespace GameEngine
{
    public sealed class UIManager : MonoBehaviour
    {
        // Handles UI system and integration
    }
}
